--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
   "bugs": {
     "url": "https://github.com/termosa/go/issues"
   },
-  "homepage": "https://github.com/termosa/go#readme"
+  "homepage": "https://github.com/termosa/go#readme",
+  "dependencies": {
+    "download-github-repo": "0.1.3",
+    "go": "git@github.com:termosa/go.git#v3"
+  }
 }
