--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "homepage": "https://github.com/termosa/go#readme",
   "dependencies": {
     "download-github-repo": "0.1.3",
-    "go": "git@github.com:termosa/go.git#v3"
+    "findup-sync": "2.0.0",
+    "shelljs": "0.8.0",
+    "yargs": "10.1.1"
   }
 }
