--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "download-github-repo": "0.1.3",
     "interpret": "1.1.0",
     "liftoff": "2.5.0",
-    "minimist": "1.2.0"
+    "minimist": "1.2.0",
+    "shelljs": "0.8.1"
   }
 }
