--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/termosa/go-cli.git"
+    "url": "git+https://github.com/gocli/go-cli.git"
   },
   "keywords": [
     "boilerplate",
@@ -21,12 +21,12 @@
     "cli",
     "go"
   ],
-  "author": "Stanislav Termosa <termosa.stanislav@gmail.com>",
+  "author": "Stanislav Termosa <termosa.stanislav@gmail.com> (https://github.com/termosa)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/termosa/go/issues"
+    "url": "https://github.com/gocli/go/issues"
   },
-  "homepage": "https://github.com/termosa/go#readme",
+  "homepage": "https://github.com/gocli/go#readme",
   "dependencies": {
     "download-github-repo": "0.1.3",
     "interpret": "1.1.0",
