--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "go-cli",
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0-rc.2",
   "description": "Create and use boilerplates with ease",
   "bin": {
     "go": "bin/go.js"
@@ -33,6 +33,6 @@
     "liftoff": "^2.5.0",
     "minimist": "^1.2.0",
     "resolve-global": "^0.1.0",
-    "shelljs": "^0.8.1"
+    "which": "^1.3.0"
   }
 }
