--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "go-cli",
   "version": "1.0.0-rc.4",
-  "description": "Create and use boilerplates with ease",
+  "description": "Create, install and use boilerplates with ease",
   "bin": {
     "go": "bin/go.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "rollup -cw",
+    "test": "standard -v | snazzy",
+    "build": "rollup -c",
+    "prepublishOnly": "npm run test && npm run build"
   },
   "repository": {
     "type": "git",
@@ -28,11 +31,18 @@
   },
   "homepage": "https://github.com/gocli/go#readme",
   "dependencies": {
-    "go-loader-git": "^1.0.0",
-    "interpret": "^1.1.0",
-    "liftoff": "^2.5.0",
-    "minimist": "^1.2.0",
-    "resolve-global": "^0.1.0",
-    "which": "^1.3.0"
+    "go-loader-git": "1.0.0",
+    "interpret": "1.1.0",
+    "liftoff": "2.5.0",
+    "minimist": "1.2.0",
+    "resolve-global": "0.1.0",
+    "which": "1.3.0"
+  },
+  "devDependencies": {
+    "rollup": "^0.55.3",
+    "rollup-plugin-buble": "^0.18.0",
+    "rollup-plugin-standard": "^1.0.0",
+    "snazzy": "^7.0.0",
+    "standard": "^10.0.3"
   }
 }
