--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "go-cli",
-  "version": "1.0.0-rc.4",
+  "version": "1.0.0-rc.5",
   "description": "Create, install and use boilerplates with ease",
   "bin": {
     "go": "bin/go.js"
@@ -31,7 +31,9 @@
   },
   "homepage": "https://github.com/gocli/go#readme",
   "dependencies": {
+    "chalk": "2.3.1",
     "go-loader-git": "^2.0.0",
+    "inquirer": "5.1.0",
     "interpret": "1.1.0",
     "is-git-url": "1.0.0",
     "liftoff": "2.5.0",
