--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "go": "bin/go.js"
   },
   "scripts": {
-    "start": "rollup -cw",
     "test": "standard -v | snazzy",
-    "build": "rollup -c",
-    "prepublishOnly": "npm run test && npm run build"
+    "prepublishOnly": "npm run test"
   },
   "engines": {
     "node": ">=6.4.0"
@@ -46,9 +44,6 @@
     "which": "1.3.0"
   },
   "devDependencies": {
-    "rollup": "^0.55.3",
-    "rollup-plugin-buble": "^0.18.0",
-    "rollup-plugin-standard": "^1.0.0",
     "snazzy": "^7.0.0",
     "standard": "^10.0.3"
   }
