--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "homepage": "https://github.com/gocli/go#readme",
   "dependencies": {
     "chalk": "2.3.1",
-    "go-loader-git": "file:../dist/go-loader-git.tgz",
+    "go-loader-git": "^2.0.0",
     "inquirer": "5.1.0",
     "interpret": "1.1.0",
     "liftoff": "2.5.0",
@@ -58,6 +58,7 @@
   },
   "standard": {
     "globals": [
+      "beforeEach",
       "describe",
       "expect",
       "it"
