--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "go-cli",
-  "version": "1.0.0-rc.5",
+  "version": "1.0.0",
   "description": "Create, install and use boilerplates with ease",
   "main": "./lib",
   "bin": {
@@ -45,7 +45,7 @@
   "homepage": "https://github.com/gocli/go#readme",
   "dependencies": {
     "chalk": "2.3.1",
-    "go-loader-git": "^2.0.0",
+    "go-loader-git": "^3.0.0",
     "inquirer": "5.1.0",
     "interpret": "1.1.0",
     "liftoff": "2.5.0",
