--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "homepage": "https://github.com/gocli/go#readme",
   "dependencies": {
     "chalk": "2.3.1",
+    "go-loader-gist": "^0.1.0",
     "go-loader-git": "^3.0.3",
     "go-loader-github": "0.0.4",
     "inquirer": "5.1.0",
